--- a/logging/examples/kubernetes/fluent-bit-ds.yml
+++ b/logging/examples/kubernetes/fluent-bit-ds.yml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: fluent-bit
-          image: fluent/fluent-bit:1.9-debug
+          image: fluent/fluent-bit:latest
           imagePullPolicy: Always
           volumeMounts:
             - name: varlog
