--- a/logging/examples/generic/fluentbit.conf
+++ b/logging/examples/generic/fluentbit.conf
@@ -6,3 +6,9 @@
     Host            <TCP_ENDPOINT>
     Shared_Key      <TOKEN>
     tls             on
+
+[FILTER]
+    Name record_modifier
+    Match *
+    Record genlabel1 value1
+    Record genlabel2 value2
