--- a/logging/examples/systemd/fluentbit.conf
+++ b/logging/examples/systemd/fluentbit.conf
@@ -11,3 +11,8 @@
     Name            systemd
     Systemd_Filter  _SYSTEMD_UNIT=docker.service # line can be repeated to include multiple services in logs, they will have separate lables for search in grafana
 
+[FILTER]
+  Name record_modifier
+  Match *
+  Record syslabel1 value1
+  Record syslabel2 value2
