--- a/logging/examples/docker/fluentbit.conf
+++ b/logging/examples/docker/fluentbit.conf
@@ -7,17 +7,6 @@
     tls             on
     Shared_Key      <KEY>
 
-# Exmaple of HTTPS Output
-# [OUTPUT]
-#    Name            http
-#    Match           *
-#    Host            <HTTP_ENDPOINT>
-#    URI             /<TAG>
-#    Port            443
-#    Format          json
-#    Header          APIKEY <KEY>
-#    tls             on
-
 [INPUT]
     Name              forward
     Listen            0.0.0.0
@@ -30,3 +19,5 @@
     Name record_modifier
     Match *
     Uuid_key uuid
+    Record dlabel1 value1
+    Record dlabel2 value2
