--- a/logging/examples/generic/fluentbit.conf
+++ b/logging/examples/generic/fluentbit.conf
@@ -10,5 +10,4 @@
 [FILTER]
     Name record_modifier
     Match *
-    Record genlabel1 value1
-    Record genlabel2 value2
+    Record <LABEL_NAME> <VALUE>
