--- a/logging/examples/docker/fluentbit.conf
+++ b/logging/examples/docker/fluentbit.conf
@@ -19,5 +19,4 @@
     Name record_modifier
     Match *
     Uuid_key uuid
-    Record dlabel1 value1
-    Record dlabel2 value2
+    Record <LABEL_NAME> <VALUE>
