--- a/logging/examples/http/fluentbit.conf
+++ b/logging/examples/http/fluentbit.conf
@@ -4,7 +4,7 @@
     Port            9000
     Tag             <TAG>
     Host            <TCP_ENDPOINT>
-    Shared_Key      <TOKEN>
+    Shared_Key      <KEY>
     tls             on
 
 [INPUT]
