--- a/logging/examples/kubernetes/fluent-bit-configmap.yml
+++ b/logging/examples/kubernetes/fluent-bit-configmap.yml
@@ -61,7 +61,7 @@ data:
         Tag             <TAG>
         Host            <TCP_ENDPOINT>
         tls             on
-        Shared_Key      <TOKEN>
+        Shared_Key      <KEY>
 
   parsers.conf: |
     [PARSER]
