--- a/logging/examples/docker/fluentbit.conf
+++ b/logging/examples/docker/fluentbit.conf
@@ -7,6 +7,17 @@
     tls             on
     Shared_Key      <KEY>
 
+# Exmaple of HTTPS Outputdd
+# [OUTPUT]
+#    Name            http
+#    Match           *
+#    Host            <HTTP_ENDPOINT>
+#    URI             /<TAG>
+#    Port            443
+#    Format          json
+#    Header          APIKEY <KEY>
+#    tls             on
+
 [INPUT]
     Name              forward
     Listen            0.0.0.0
