--- a/logging/examples/docker/fluentbit.conf
+++ b/logging/examples/docker/fluentbit.conf
@@ -7,7 +7,7 @@
     tls             on
     Shared_Key      <KEY>
 
-# Exmaple of HTTPS Output
+# Example of HTTPS Output
 # [OUTPUT]
 #    Name            http
 #    Match           *
